--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,32 +1,51 @@
-<h1>Register for a Course</h1>
+<header class="row">
+  <h1 class="twelvecol">
+    Register for a Course &nbsp;
+  </h1>
+</header>
 
-<%= form_tag '/courses', :method => :get do -%>
-  <%= autocomplete_field_tag 'search', h(params[:search]), autocomplete_course_searchkey_courses_path, :class => 'search' %> <%= submit_tag 'Search', :name => nil %>
-<% end -%>
+<div class="row">
+  <div class="twelvecol">
+    <%= form_tag '/courses', :method => :get do %>
+      <%= autocomplete_field_tag 'search', h(params[:search]), autocomplete_course_searchkey_courses_path, :class => 'search' %>
+      <%= submit_tag 'Search', :name => nil %>
+    <% end %>
+  </div>
+</div>
 
 <% if @courses.nil? %>
-  <div>
-    <p>Instructions: Type any part of the course name, number, or code.</p>
-    <p>Example: <tt>csc3</tt> - Find CSC 300 level courses.<br>
-       Example: <tt>computer</tt> - Find courses with Computer in the title.</p>
+  <div class="row">
+    <div class="twelvecol">
+      <p>Instructions: Type any part of the course name, number, or code.</p>
+      <p>Example: <tt>csc3</tt> - Find CSC 300 level courses.<br>
+         Example: <tt>computer</tt> - Find courses with Computer in the title.</p>
+    </div>
   </div>
 <% else %>
-  Searching for: <%= (params[:search].blank? ? 'All courses' : h(params[:search]) ) %><p/>
+  <div class="row">
+    <div class="twelvecol">
+      Searching for: <%= (params[:search].blank? ? 'All courses' : h(params[:search]) ) %><p/>
+    </div>
+  </div>
 
   <% options = {:show_wishlist_button => true,
                 :show_schedule_button => true} %>
 
-<% if @courses.any? %>
-  <table class="course-list">
-    <%= render :partial => "courses/course", :collection => @courses,
-               :locals => { :options => options,
-                            :wishlist_section_ids => @wishlist_section_ids,
-                            :registered_section_ids => @registered_section_ids } %>
-  </table>
+  <% if @courses.any? %>
+    <div class="row course-list">
+      <%= render :partial => "courses/course", :collection => @courses,
+                 :locals => { :options => options,
+                              :wishlist_section_ids => @wishlist_section_ids,
+                              :registered_section_ids => @registered_section_ids } %>
+    </div><!--course-list-->
 
-<% else %>
-<h3>We didn't find any classes that matched your search.</h3>
-<% end %>
+  <% else %>
+    <div class="row">
+      <div class="twelvecol">
+        We didn't find any classes that matched your search.
+      </div>
+    </div>
+  <% end %>
   <br/>
 
 <% end %>
