Sections in search look good

--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -74,7 +74,7 @@ purpose = :wishlist if options[:show_remove_button]
     <% if options[:added].nil? or options[:added] %>
       <div class="row">
         <div class="twelvecol description">
-          <%=course.description%>
+          <p><%=course.description%></p>
         </div>
       </div>
     <% end %>
