--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -4,37 +4,41 @@
 %>
 
 <div class="row <%= section.code %>">
-  <div class="threecol"><%=section.professor%></div>    
-  <div class="threecol"><%=section.room%></div>
+  <div class="threecol first"><p><%=section.professor%></p></div>
+  <div class="twocol"><p><%=section.room%></p></div>
 
   <div class="threecol">
-    <%- if options[:added] -%>
-Section <%= section.number %>
-    <%- else -%>
-<%= section.days %> 
-<%= section.begin_time.strftime(time_format) %>-<%= section.end_time.strftime(time_format) %>
-    <%- end -%>
+    <p>
+      <%- if options[:added] -%>
+        Section <%= section.number %>
+      <%- else -%>
+        <%= section.days %>
+        <%= section.begin_time.strftime(time_format) %>-<%= section.end_time.strftime(time_format) %>
+      <%- end -%>
+    </p>
   </div>
 
-  <div class="threecol last" class="button">
-    <% if options[:show_wishlist_button] %>
-      <% if wishlist_section_ids.include? section.id %>
-        Wishlisted&nbsp;&nbsp;
-      <% else %>
-        <%= form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
-          <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
+  <div class="fourcol last button">
+    <p>
+      <% if options[:show_wishlist_button] %>
+        <% if wishlist_section_ids.include? section.id %>
+          Wishlisted&nbsp;&nbsp;
+        <% else %>
+          <%= form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
+            <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
+          <% end %>
         <% end %>
       <% end %>
-    <% end %>
-    <% if options[:show_schedule_button] %>
-      <% if registered_section_ids.include? section.id %>
-        &nbsp;Enrolled
-      <% else %>
-        <%= form_for RegisteredSection.new, :html => { :id => nil, :class => 'newRegisteredSection' } do |f| %>
-          <%= render :partial => 'registered_sections/add_button', :locals => { :section_id => section.id } %>
+      <% if options[:show_schedule_button] %>
+        <% if registered_section_ids.include? section.id %>
+          &nbsp;Enrolled
+        <% else %>
+          <%= form_for RegisteredSection.new, :html => { :id => nil, :class => 'newRegisteredSection' } do |f| %>
+            <%= render :partial => 'registered_sections/add_button', :locals => { :section_id => section.id } %>
+          <% end %>
         <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </p>
+  </div><!--last-->
 
 </div><!--row code-->
