--- a/app/views/registered_sections/_schedule.html.erb
+++ b/app/views/registered_sections/_schedule.html.erb
@@ -67,8 +67,10 @@
         </div><!--main-->
         
         <% if (errors[reg_section.id] != nil) %>
-          <div id="<%=unique_id%>error" class="error" uid="<%=unique_id%>">
-            <%=errors[reg_section.id]%>
+          <div class="row">
+            <div class="twelvecol error" id="<%=unique_id%>error" uid="<%=unique_id%>">
+              <%=errors[reg_section.id]%>
+            </div>
           </div>
         <% end %>
               
@@ -83,7 +85,6 @@
             <div class="threecol"><p>Room: <%=section.room%></p></div>
             <div class="threecol"><p><%= pluralize(course.credits, "Credit hour") %></p></div>
             <div class="threecol last"><p>Section #<%=section.number%></p></div>
-            </div>
           </div>
         </div><!--extra-->
       </div><!--course-code section-code-->
