--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -35,16 +35,14 @@ nav ul.tab-list > li#selected-tab {
 	border-bottom: none;
 }
 
-section header h1 {
-  margin-top: 40px;
-}
-
+/*
 section header {
   border-bottom: 2px solid #2d3335;
   box-shadow: 0 1px 0 0 white;
   -moz-box-shadow: 0 1px 0 0 white;
   -webkit-box-shadow: 0 1px 0 0 white;
 }
+*/
 
 section header h1 {
   border-bottom: 5px solid #2d3335;
@@ -53,10 +51,18 @@ section header h1 {
   -webkit-box-shadow: 0 1px 0 0 white;
   color: #2d3335;
   display: inline-block;
-  margin-bottom: -3px;
+  margin: 40px 0 -3px 0;
   overflow: visible;
   padding-bottom: 22px;
   position: relative;
+  text-shadow: 0 1px white;
+}
+
+.row h2 {
+  color: #2d3335;
+  font-family: Georgia;
+  font-size: 25px;
+  margin: 20px 0;
   text-shadow: 0 1px white;
 }
 
@@ -98,7 +104,7 @@ section header h1 {
   font-family: Calluna;
   font-size: 18px;
   margin: 20px 30px;
-  text-shadow: 0 1px #f6f6f6;
+  text-shadow: 0 1px #eeeeee;
 }
 
 .course-code, .group-code {
@@ -129,7 +135,7 @@ section header h1 {
   text-shadow: 0 1px white;
 }
 
-.course-count {
+.course-count, .course-grade {
   color: #8e8e8e;
   font-family: Verdana;
   font-size: 18px;
