Remove left margin on first column for mobile

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -157,11 +157,9 @@ section header h1 {
 
 @media handheld, only screen and (max-width: 767px) {
 
-.examplecontainer {
-
-body {
-
-}
+  .course-list .first p {
+    margin-left: 0;
+  }
 
 }
 
