Disabling buttons to mirror server-side status almost done. Just need to not replace the button with a spinner.

--- a/app/views/registered_sections/_add_button.html.erb
+++ b/app/views/registered_sections/_add_button.html.erb
@@ -1,2 +1,2 @@
       <input type="hidden" name="[registered_section]section_id" value="<%= section_id %>">
-      <input type="submit" value="Add to Schedule">
+      <input class="add-to-schedule" section="<%=section_id%>" type="submit" value="Add to Schedule">
