--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -19,15 +19,18 @@
 
   <div class="fourcol last button">
     <p>
-      <% if options[:show_wishlist_button] %>
-        <% if wishlist_section_ids.include? section.id %>
-          Wishlisted&nbsp;&nbsp;
-        <% else %>
+      <span class="wishlist-button <%=section.id%>">
+        <% if options[:show_wishlist_button] %>
           <%= form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
             <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
           <% end %>
+          <% if wishlist_section_ids.include? section.id %>
+            <%= javascript_tag do %>
+              disableWishlistButton(<%=section.id%>);
+            <% end -%>
+          <% end %>
         <% end %>
-      <% end %>
+      </span>
       <% if options[:show_schedule_button] %>
         <% if registered_section_ids.include? section.id %>
           &nbsp;Enrolled
