--- a/app/views/wishlist_sections/_add_button.html.erb
+++ b/app/views/wishlist_sections/_add_button.html.erb
@@ -1,2 +1,2 @@
       <input type="hidden" name="[wishlist_section]section_id" value="<%= section_id %>">
-      <input type="submit" value="Add to Wishlist">
+      <input type="submit" value="Add to Wishlist" class="add-to-wishlist" section="<%= section_id %>" >
